# aws-scanner

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  scan_aws.py  test_vpc_scanner.py
aws_scanner/: __init__.py  logger.py  session.py  type_defs.py  types.py  utils.py
aws_scanner/config/: __init__.py  pricing.py  settings.py
aws_scanner/scanners/: __init__.py  apigateway_scanner.py  base_scanner.py  cloudfront_scanner.py  cloudtrail_scanner.py  dynamodb_scanner.py  ec2_scanner.py  ecs_scanner.py  eks_scanner.py  elb_scanner.py  guardduty_scanner.py  kms_scanner.py  lambda_scanner.py  rds_scanner.py  route53_scanner.py  s3_scanner.py  secretsmanager_scanner.py  vpc_scanner.py
tests/: README.md  __init__.py  conftest.py
tests/unit/: __init__.py  test_base_scanner.py  test_config.py  test_ec2_scanner.py  test_main.py  test_types.py  test_utils.py
